package creational.factory.pizza;

public enum PizzaType {
  HAI_SAN,BO,THAP_CAM,NAM_CHAY
}
